font size correction

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <script src="https://kit.fontawesome.com/0b45d263ce.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header class=" bg-base-100 shadow-sm">
-        <div class="navbar max-w-[980px] mx-auto">
-            <div class="navbar-start">
+        <div class="navbar max-w-[980px] mx-auto ">
+            <div class="navbar-start w-auto">
                 <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -38,8 +39,8 @@
                 </div>
                 <a href="/"><img src="./img/apple.svg" alt=""></a>
             </div>
-            <div class="navbar-center hidden lg:flex grow justify-between">
-                <ul class="menu menu-horizontal px-1">
+            <div class="navbar-center hidden lg:flex grow justify-between ">
+                <ul class="menu menu-horizontal px-1 text-[12px]">
                     <li><a>Store</a></li>
                     <li><a>Mac</a></li>
                     <li><a>Ipad</a></li>
