--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <header class=" bg-base-100 shadow-sm">
-        <div class="navbar max-w-[980px] mx-auto ">
-            <div class="navbar-start w-auto">
+        <div class="navbar max-w-[980px] mx-auto justify-between">
+            <div class="navbar-start w-auto mr-3">
                 <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -39,8 +39,8 @@
                 </div>
                 <a href="/"><img src="./img/apple.svg" alt=""></a>
             </div>
-            <div class="navbar-center hidden lg:flex grow justify-between ">
-                <ul class="menu menu-horizontal px-1 text-[12px]">
+            <div class="navbar-center hidden lg:flex grow">
+                <ul class="menu menu-horizontal px-1 text-[12px] justify-between grow">
                     <li><a>Store</a></li>
                     <li><a>Mac</a></li>
                     <li><a>Ipad</a></li>
@@ -49,13 +49,13 @@
                     <li><a>Airpods</a></li>
                     <li><a>TV & Shows</a></li>
                     <li><a>Entertainment</a></li>
-                    <li><a>accessories</a></li>
+                    <li><a>Accessories</a></li>
                     <li><a>Support</a></li>
 
 
                 </ul>
             </div>
-            <div class="navbar-end">
+            <div class="navbar-end w-auto gap-8 ml-3">
                 <a class=""> <i class="fa-solid fa-magnifying-glass"></i></a>
                 <a class=""> <i class="fa-solid fa-bag-shopping"></i></a>
             </div>
